--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,85 @@
+/** importing styles **/
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+* {
+ padding: 0;
+ margin: 0;
+}
+
 body {
  width: 100vw;
  height: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
+ font-family: 'Poppins';
  background-color: var(--bg-color);
+}
+
+header,nav {
+ width: 100vw;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+}
+
+nav > ul {
+ width: 96vw;
+ height: 5rem;
+ position: fixed;
+ top: .2rem;
+ display: flex;
+ align-items: center;
+ justify-content: space-between;
+ color: var(--text-color);
+ padding: 0 1rem;
+ margin: .5rem 0 1rem 0;
+ list-style: none;
+}
+
+nav > ul > li {
+ height: 100%;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ border-radius: var(--box-radius);
+}
+
+nav > ul > li:first-of-type {
+ height: 4rem;
+ justify-content: space-evenly;
+ padding: 0 .6rem;
+ background-color: rgba(10, 10, 10, 0.2);
+ backdrop-filter: blur(5px);
+}
+
+nav > ul > li:first-of-type > h1 {
+ font-weight: 650;
+}
+
+.nav-dp {
+ width: 3.2rem;
+ height: 3.2rem;
+ background-color: var(--shade);
+ border-radius: var(--box-radius);
+ margin-right: .8rem;
+}
+
+.switch-toggle {
+ width: 3rem;
+ height: 3rem;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ background-color: rgba(10, 10, 10, 0.2);
+ backdrop-filter: blur(5px);
+ border: none;
+ border-radius: var(--box-radius);
+}
+
+.switch-toggle > div {
+ width: 1.4rem;
+ height: 1.4rem;
+ background-color: var(--text-color);
+ border-radius: 50%;
 }
