--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
 :root {
- --bg-color: rgb(11, 11, 11);
+ --text-color: rgb(220, 220, 220);
+ --bg-color: rgb(10, 10, 10);
+ --shade: rgb(14, 14, 14);
+ --box-radius: .8rem;
 }
