--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,12 @@ body {
  flex-direction: column;
  align-items: center;
  font-family: 'Poppins';
+ font-weight: 200;
  background-color: var(--bg-color);
+}
+
+svg {
+ stroke: var(--text-color);
 }
 
 header,nav {
@@ -24,7 +29,7 @@ header,nav {
 }
 
 nav > ul {
- width: 96vw;
+ width: 94vw;
  height: 5rem;
  position: fixed;
  top: .2rem;
@@ -32,7 +37,7 @@ nav > ul {
  align-items: center;
  justify-content: space-between;
  color: var(--text-color);
- padding: 0 1rem;
+ padding: 0 1.8rem;
  margin: .5rem 0 1rem 0;
  list-style: none;
 }
@@ -46,11 +51,12 @@ nav > ul > li {
 }
 
 nav > ul > li:first-of-type {
- height: 4rem;
+ height: auto;
  justify-content: space-evenly;
- padding: 0 .6rem;
- background-color: rgba(10, 10, 10, 0.2);
- backdrop-filter: blur(5px);
+ padding-right: .6rem;
+ background: rgba(20, 20, 20, 0.10);
+ backdrop-filter: blur(1.4px);
+ -webkit-backdrop-filter: blur(1.4px);
 }
 
 nav > ul > li:first-of-type > h1 {
@@ -71,8 +77,9 @@ nav > ul > li:first-of-type > h1 {
  display: flex;
  align-items: center;
  justify-content: center;
- background-color: rgba(10, 10, 10, 0.2);
- backdrop-filter: blur(5px);
+ background: rgba(255, 255, 255, 0.08);
+ backdrop-filter: blur(1.4px);
+ -webkit-backdrop-filter: blur(1.4px);
  border: none;
  border-radius: var(--box-radius);
 }
@@ -82,4 +89,76 @@ nav > ul > li:first-of-type > h1 {
  height: 1.4rem;
  background-color: var(--text-color);
  border-radius: 50%;
+}
+
+main {
+ width: 100vw;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+}
+
+section {
+ width: 88%;
+ height: auto;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ padding: 1rem 6%;
+ color: var(--text-color);
+}
+
+.hero-section {
+ min-height: 90vh;
+ align-items: flex-start;
+ justify-content: center;
+ background-color: var(--bg-color)/*#0b0a0d*/;
+ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='152' height='152' viewBox='0 0 152 152'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='temple' fill='%23000000' fill-opacity='0.45'%3E%3Cpath d='M152 150v2H0v-2h28v-8H8v-20H0v-2h8V80h42v20h20v42H30v8h90v-8H80v-42h20V80h42v40h8V30h-8v40h-42V50H80V8h40V0h2v8h20v20h8V0h2v150zm-2 0v-28h-8v20h-20v8h28zM82 30v18h18V30H82zm20 18h20v20h18V30h-20V10H82v18h20v20zm0 2v18h18V50h-18zm20-22h18V10h-18v18zm-54 92v-18H50v18h18zm-20-18H28V82H10v38h20v20h38v-18H48v-20zm0-2V82H30v18h18zm-20 22H10v18h18v-18zm54 0v18h38v-20h20V82h-18v20h-20v20H82zm18-20H82v18h18v-18zm2-2h18V82h-18v18zm20 40v-18h18v18h-18zM30 0h-2v8H8v20H0v2h8v40h42V50h20V8H30V0zm20 48h18V30H50v18zm18-20H48v20H28v20H10V30h20V10h38v18zM30 50h18v18H30V50zm-2-40H10v18h18V10z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+}
+
+.hero-section > p:first-of-type {
+ margin-top: 3rem;
+}
+.hero-section > h1 {
+ font-size: 3rem;
+ font-weight: 340;
+ line-height: 3.6rem;
+ margin: 3.5rem 0 2.5rem 0;
+}
+.hero-section > p:last-of-type {
+ display: flex;
+ align-items: center;
+ justify-content: center;
+}
+.hero-section > p:last-of-type svg {
+ margin: .4rem 0 0 .8rem;
+}
+
+.movingtags-outer-wrapper {
+  width: 100%;
+  height: 6rem;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.inner-wrapper {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  gap: 50px;
+  animation: marquee-animation 16s linear infinite;
+}
+
+.inner-wrapper:hover {
+ animation-play-state: paused;
+}
+
+.inner-wrapper h2 {
+  margin: 0; 
+  white-space: nowrap; 
+  font-size: 1.5rem;
+  color: var(--text-color);
 }
