--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ body {
  font-family: 'Poppins';
  font-weight: 200;
  background-color: var(--bg-color);
+ transition: 400ms;
 }
 
 svg {
@@ -54,7 +55,7 @@ nav > ul > li:first-of-type {
  height: auto;
  justify-content: space-evenly;
  padding-right: .6rem;
- background: rgba(20, 20, 20, 0.10);
+ background: rgba(25, 25, 25, 0.08);
  backdrop-filter: blur(1.4px);
  -webkit-backdrop-filter: blur(1.4px);
 }
@@ -66,6 +67,9 @@ nav > ul > li:first-of-type > h1 {
 .nav-dp {
  width: 3.2rem;
  height: 3.2rem;
+ display: flex;
+ align-items: flex-end;
+ justify-content: center;
  background-color: var(--shade);
  border-radius: var(--box-radius);
  margin-right: .8rem;
@@ -77,9 +81,9 @@ nav > ul > li:first-of-type > h1 {
  display: flex;
  align-items: center;
  justify-content: center;
- background: rgba(255, 255, 255, 0.08);
- backdrop-filter: blur(1.4px);
- -webkit-backdrop-filter: blur(1.4px);
+ background: rgba(25, 25,  25, 0.08);
+ backdrop-filter: blur(1px);
+ -webkit-backdrop-filter: blur(1px);
  border: none;
  border-radius: var(--box-radius);
 }
@@ -112,8 +116,8 @@ section {
  min-height: 90vh;
  align-items: flex-start;
  justify-content: center;
- background-color: var(--bg-color)/*#0b0a0d*/;
- background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='152' height='152' viewBox='0 0 152 152'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='temple' fill='%23000000' fill-opacity='0.45'%3E%3Cpath d='M152 150v2H0v-2h28v-8H8v-20H0v-2h8V80h42v20h20v42H30v8h90v-8H80v-42h20V80h42v40h8V30h-8v40h-42V50H80V8h40V0h2v8h20v20h8V0h2v150zm-2 0v-28h-8v20h-20v8h28zM82 30v18h18V30H82zm20 18h20v20h18V30h-20V10H82v18h20v20zm0 2v18h18V50h-18zm20-22h18V10h-18v18zm-54 92v-18H50v18h18zm-20-18H28V82H10v38h20v20h38v-18H48v-20zm0-2V82H30v18h18zm-20 22H10v18h18v-18zm54 0v18h38v-20h20V82h-18v20h-20v20H82zm18-20H82v18h18v-18zm2-2h18V82h-18v18zm20 40v-18h18v18h-18zM30 0h-2v8H8v20H0v2h8v40h42V50h20V8H30V0zm20 48h18V30H50v18zm18-20H48v20H28v20H10V30h20V10h38v18zM30 50h18v18H30V50zm-2-40H10v18h18V10z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+ background-color: var(--bg-color)/* #0b0a0d*/;
+ background-image: var(--hero-image);
 }
 
 .hero-section > p:first-of-type {
@@ -123,7 +127,7 @@ section {
  font-size: 3rem;
  font-weight: 340;
  line-height: 3.6rem;
- margin: 3.5rem 0 2.5rem 0;
+ margin: 4.5rem 0 2.5rem 0;
 }
 .hero-section > p:last-of-type {
  display: flex;
@@ -142,14 +146,15 @@ section {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: var(--shade);
 }
 
 .inner-wrapper {
   height: 100%;
   display: flex;
   align-items: center;
-  gap: 50px;
-  animation: marquee-animation 16s linear infinite;
+  gap: 20px;
+  animation: marquee-animation 18s linear infinite;
 }
 
 .inner-wrapper:hover {
