--- a/src/App.css
+++ b/src/App.css
@@ -56,8 +56,8 @@ nav > ul > li:first-of-type {
  justify-content: space-evenly;
  padding-right: .6rem;
  background: rgba(25, 25, 25, 0.08);
- backdrop-filter: blur(1.4px);
- -webkit-backdrop-filter: blur(1.4px);
+ backdrop-filter: blur(2px);
+ -webkit-backdrop-filter: blur(2px);
 }
 
 nav > ul > li:first-of-type > h1 {
@@ -82,8 +82,8 @@ nav > ul > li:first-of-type > h1 {
  align-items: center;
  justify-content: center;
  background: rgba(25, 25,  25, 0.08);
- backdrop-filter: blur(1px);
- -webkit-backdrop-filter: blur(1px);
+ backdrop-filter: blur(2px);
+ -webkit-backdrop-filter: blur(2px);
  border: none;
  border-radius: var(--box-radius);
 }
@@ -108,20 +108,43 @@ section {
  display: flex;
  flex-direction: column;
  align-items: center;
- padding: 1rem 6%;
  color: var(--text-color);
+ padding: 1rem 6%;
+ scroll-margin: 2rem 0;
+ margin: 1.4rem 0;
+}
+
+.section-headtag {
+ height: 2rem;
+ align-self: flex-start;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ margin: 1rem 0;
+}
+.section-headtag > h3 {
+ font-weight: 300;
+ margin-right: .6rem;
+}
+
+.section-headtitle {
+ align-self: flex-start;
+ font-size: 2.6rem;
+ font-weight: 380;
+ margin-bottom: 1.8rem;
 }
 
 .hero-section {
  min-height: 90vh;
  align-items: flex-start;
  justify-content: center;
- background-color: var(--bg-color)/* #0b0a0d*/;
+ background-color: var(--bg-color);
  background-image: var(--hero-image);
+ margin-top: 0;
 }
 
 .hero-section > p:first-of-type {
- margin-top: 3rem;
+ margin-top: 1rem;
 }
 .hero-section > h1 {
  font-size: 3rem;
@@ -147,6 +170,7 @@ section {
   align-items: center;
   justify-content: center;
   background-color: var(--shade);
+  margin-top: -1.5rem;
 }
 
 .inner-wrapper {
@@ -166,4 +190,56 @@ section {
   white-space: nowrap; 
   font-size: 1.5rem;
   color: var(--text-color);
+}
+
+
+.about-section-container {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+}
+
+.about-section-container > div {
+  width: 100%;
+  height: 28rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.about-section-container > div:first-of-type {
+  object-fit: cover;
+  background-color: var(--shade);
+  background-image: url('/illustrations/developer.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: var(--box-radius);
+  margin-bottom: 1rem;
+  animation: dim 1s linear infinite;
+}
+.about-section-container > div:last-of-type > p {
+  margin-top: 1rem;
+}
+
+
+
+
+@media (min-width: 726px) {
+  .about-section-container {
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 2rem;
+  }
+  
+  .about-section-container > div {
+    width: 50%;
+  }
+  .about-section-container > div:last-of-type > p {
+    margin-bottom: 1rem;
+  }
 }
