--- a/src/App.css
+++ b/src/App.css
@@ -229,8 +229,8 @@ section {
 }
 
 .about-section-container > div {
-  width: 100%;
-  height: 28rem;
+  width: 95%;
+  height: 26rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -276,6 +276,7 @@ section {
   align-items: center;
   justify-content: center;
   padding: 2rem;
+  background-color: var(--shade);
   border: 0.2rem double var(--shade);
   border-radius: var(--box-radius);
 }
@@ -283,7 +284,8 @@ section {
 .services-container > div > h2 {
  font-size: 2.5rem;
  font-weight: 320;
- margin: 1rem 0;
+ padding-bottom: .5rem;
+ margin-bottom: 1.5rem;
 }
 
 
@@ -330,14 +332,23 @@ section {
 }
 
 .project-details .project-image {
- width: 100%;
- height: 50%;
+ width: 98.5%;
+ height: 45%;
+ display: flex;
+ align-items: flex-end;
+ justify-content: center;
+ object-fit: cover;
  background-color: var(--bg-color);
+ border: 0.1rem solid var(--shade);
+}
+.project-image > img {
+ width: 100%;
+ height: 95%;
 }
 
 .project-details .project-info {
  width: 90%;
- height: 50%;
+ height: 55%;
  padding: 0 5%
 }
 .project-info > h1 {
@@ -347,7 +358,7 @@ section {
 
 .project-tools {
  width: 100%;
- min-height: 3rem;
+ min-height: 2.5rem;
  height: auto;
  display: flex;
  flex-wrap: wrap;
