--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 /** importing styles **/
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+
 * {
  padding: 0;
  margin: 0;
@@ -13,7 +14,7 @@ body {
  flex-direction: column;
  align-items: center;
  font-family: 'Poppins';
- font-weight: 200;
+ font-weight: 280;
  background-color: var(--bg-color);
  transition: 400ms;
 }
@@ -44,7 +45,7 @@ nav > ul {
  align-items: center;
  justify-content: space-between;
  color: var(--text-color);
- padding: 0 1.8rem;
+ padding: 0 1.8rem; 
  margin: .5rem 0 1rem 0;
  list-style: none;
  z-index: 10;
@@ -63,8 +64,8 @@ nav > ul > li:first-of-type {
  justify-content: space-evenly;
  padding-right: .6rem;
  background: rgba(25, 25, 25, 0.08);
- backdrop-filter: blur(3.4px);
- -webkit-backdrop-filter: blur(3.4px);
+ backdrop-filter: blur(5px);
+ -webkit-backdrop-filter: blur(5px);
 }
 
 nav > ul > li:first-of-type > h1 {
@@ -89,8 +90,8 @@ nav > ul > li:first-of-type > h1 {
  align-items: center;
  justify-content: center;
  background: rgba(25, 25,  25, 0.08);
- backdrop-filter: blur(3.4px);
- -webkit-backdrop-filter: blur(3.4px);
+ backdrop-filter: blur(5px);
+ -webkit-backdrop-filter: blur(5px);
  border: none;
  border-radius: var(--box-radius);
 }
@@ -110,15 +111,15 @@ main {
 }
 
 section {
- width: 90%;
+ width: 88%;
  height: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  color: var(--text-color);
- padding: 1rem 5%;
+ padding: 1rem 6%;
  scroll-margin: 2rem 0;
- margin: 1.4rem 0;
+ margin: 2.5rem 0;
 }
 
 .section-headtag {
@@ -127,7 +128,7 @@ section {
  display: flex;
  align-items: center;
  justify-content: center;
- margin: 1rem 0;
+ margin: 1.5rem 0 .3rem 0;
 }
 .section-headtag > h3 {
  font-weight: 300;
@@ -136,8 +137,8 @@ section {
 
 .section-headtitle {
  align-self: flex-start;
- font-size: 2.6rem;
- font-weight: 380;
+ font-size: 2.2rem;
+ font-weight: 360;
  margin-bottom: 1.5rem;
 }
 
@@ -243,7 +244,7 @@ section {
   object-fit: cover;
   background-color: var(--shade);
   border-radius: var(--box-radius);
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
   animation: dim 1s linear infinite;
 }
 .about-section-container > div:first-of-type > img {
@@ -263,14 +264,14 @@ section {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: space-evenly;
-  gap: 2.4rem;
+  justify-content: center;
+  gap: 2.4rem 4rem;
   margin-top: 2rem;
 }
 
 .services-container > div {
-  width: 17rem;
-  height: 18.4rem;
+  width: 16rem;
+  height: 15rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -282,7 +283,8 @@ section {
 }
 
 .services-container > div > h2 {
- font-size: 2.5rem;
+ align-self: flex-start;
+ font-size: 2rem;
  font-weight: 320;
  padding-bottom: .5rem;
  margin-bottom: 1.5rem;
@@ -296,13 +298,13 @@ section {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 2rem;
+  gap: 3rem;
   margin-top: 2rem;
 }
 
 .project-box {
   width: 100%;
-  height: 45rem;
+  min-height: 45rem;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -353,19 +355,34 @@ section {
 }
 .project-info > h1 {
  font-size: 2rem;
- margin-bottom: .5rem;
+ margin-bottom: 1rem;
+}
+.project-info > p {
+ font-size: .95rem;
 }
 
-.project-tools {
+.project-stacks {
  width: 100%;
  min-height: 2.5rem;
  height: auto;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
- justify-content: center;
- border: 0.1rem solid var(--bg-color);
- margin: 2rem 0;
+ gap: .6rem;
+ margin: 1.5rem 0;
+}
+
+.project-stacks .stack {
+ width: auto;
+ padding: .3rem 1rem;
+ color: var(--text-color);
+ font-size: .8rem;
+ background-color: var(--bg-color);
+ border-radius: var(--box-radius);
+ transition: 300ms;
+}
+.project-stacks .stack:hover {
+ transform: scale(1.1);
 }
 
 .preview-btn {
@@ -379,11 +396,80 @@ section {
  border-radius: var(--box-radius);
 }
 .preview-btn > span:first-of-type {
- font-size: 1.2rem;
+  font-size: 1.2rem;
 }
 .preview-btn > span:last-of-type {
- margin-top: .3rem;
+  margin-top: .3rem;
 }
+
+
+
+.resume-tags {
+ align-self: flex-start;
+ font-weight: 600;
+ margin-bottom: 2rem;
+}
+
+.tools-container {
+ width: 100%;
+ display: flex;
+ flex-wrap: wrap;
+ align-items: center;
+ justify-content: space-evenly;
+ gap: 2rem;
+}
+
+.tools-container > div {
+ width: 8rem;
+ height: 8rem;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ justify-content: center;
+ gap: 1rem;
+ border: 0.1rem solid var(--shade);
+ border-radius: var(--box-radius);
+ transition: 200ms;
+}
+.tools-container > div:hover {
+ transform: scale(0.9);
+}
+
+.tools-container > div img {
+ width: 55%;
+ height: 55%;
+ border-radius: var(--box-radius);
+}
+.tools-container > div p {
+ font-size: .8rem;
+}
+
+
+
+.contacts-container {
+ width: 100%;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ gap: 1rem;
+ margin-top: 1rem;
+}
+
+.contact-div {
+ width: 90%;
+ height: 4rem;
+ display: flex;
+ align-items: center;
+ justify-content: space-between;
+ gap: 1rem;
+ padding: 0 5%;
+ border: 0.1rem solid var(--shade);
+ border-radius: var(--box-radius);
+}
+
+
+
+
 
 
 @media (min-width: 726px) {
@@ -402,7 +488,8 @@ section {
   }
   
   .project-box {
-   height: 28rem;
+   min-height: 26rem;
+   height: 26rem;
   }
   
   .project-details {
@@ -416,5 +503,18 @@ section {
     display: flex;
     flex-direction: column;
     justify-content: center;
+  }
+  
+  .tools-container > div {
+   width: 10rem;
+   height: 10rem;
+  }
+  
+  .contacts-container {
+   flex-direction: row;
+   flex-wrap: wrap;
+  }
+  .contacts-container > div {
+   width: 45%;
   }
 }
