--- a/src/App.css
+++ b/src/App.css
@@ -103,7 +103,8 @@ nav > ul > li:first-of-type > h1 {
  border-radius: 50%;
 }
 
-main {
+main,
+footer {
  width: 100vw;
  display: flex;
  flex-direction: column;
@@ -386,7 +387,7 @@ section {
 }
 
 .preview-btn {
- width: 100%;
+ width: fit-content;
  height: 2rem;
  display: flex;
  align-items: center;
@@ -473,7 +474,17 @@ section {
 }
 
 
-
+footer > div {
+ width: 100%;
+ height: 5rem;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ justify-content: center;
+ gap: .6rem;
+ color: var(--text-color);
+ margin: 6em 0 1rem 0;
+}
 
 
 
