--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,16 @@
-/** importing fonts **/
+/** importing fonts  **/
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
- 
+
+
+@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap');
  
 * {
  padding: 0;
  margin: 0;
+}
+
+html {
+ scroll-behavior: smooth;
 }
 
 body {
@@ -32,6 +38,15 @@ p {
 
 svg {
  stroke: var(--text-color);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+ font-family: 'Fredoka';
 }
 
 header,nav {
@@ -159,7 +174,7 @@ section {
  justify-content: center;
  background-color: var(--bg-color);
  position: relative;
- padding-top: 4rem;
+ padding-top: 5.5rem;
  margin-top: 0;
 }
 
@@ -267,21 +282,30 @@ section {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 3rem;
+  gap: 2rem; 
   margin-top: 2rem;
 }
 
 .project-box {
   width: 100%;
-  height: auto;
-  position: relative;
+  height: 45rem; 
+  position: sticky;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 2rem 0;
   background-color: var(--shade);
-  border: 0.2rem solid var(--shade);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border: 0.1rem solid var(--shade);
+  border-top: 0.1rem solid var(--bg-color);
   border-radius: var(--box-radius);
+  z-index: 1;
+  transition: transform 0.3s ease, z-index 0.3s ease;
+}
+
+.project-box:hover {
+  transform: scale(0.95);
 }
 
 .project-header {
@@ -374,6 +398,7 @@ section {
 
 
 .resume-tags {
+ width: 100%;
  align-self: flex-start;
  font-weight: 600;
  margin-bottom: 2rem;
