--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
  --text-color: rgb(220, 220, 220);
  --bg-color:  rgb(5, 5, 9);
- --shade: linear-gradient(to bottom left, rgb(17, 18, 23), rgb(9, 8, 13));
+ --shade: rgb(17, 18, 23) /* rgb(9, 8, 13)*/;
  --sclr: rgb(20, 30, 100);
  --box-radius: 1rem;
 }
