--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@ body {
  display: flex;
  flex-direction: column;
  align-items: center;
+ justify-content: center;
  font-family: 'Poppins';
  font-weight: 290;
  background-color: var(--bg-color);
@@ -521,10 +522,13 @@ footer > div {
    align-items: flex-start;
    text-align: left;
   }
+  .hero-section > div:last-of-type {
+   margin-right: -4rem;
+  }
   
   
   .about-section-brief {
-    height: 20rem;
+    height: 24rem;
     flex-direction: row;
   }
   .about-section-brief > img {
@@ -535,10 +539,11 @@ footer > div {
    padding: 0 5%;
    padding-top: 3rem;
    max-height: 100%;
+   gap: 2rem;
   }
   
   .about-section-info {
-    height: auto;
+    height: 20rem;
     align-items: center;
     justify-content: space-between;
     gap: 2rem;
