--- a/src/App.css
+++ b/src/App.css
@@ -229,6 +229,7 @@ section {
 .about-section-brief > img {
  width: 100%;
  height: 70%;
+ object-fit: cover;
  border-radius: var(--box-radius);
  transition: 400ms;
  
@@ -246,7 +247,7 @@ section {
  align-items: flex-start;
  padding: 1rem 6%;
  gap: .5rem;
- background-color: var(--bg-color);
+ background-color: rgba(255, 255, 255, 0.195);
  border-radius: var(--box-radius);
  list-style: none;
 }
