--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@ header,nav {
 }
 
 nav > ul {
- width: 80vw;
+ width: 88vw;
  height: 4rem;
  position: fixed;
  top: .4rem;
@@ -66,7 +66,7 @@ nav > ul {
  align-items: center;
  justify-content: space-between;
  color: var(--text-color);
- padding: 0 .8rem; 
+ padding: 0 1rem; 
  background-color: rgba(50, 50, 50, 0.1);
  backdrop-filter: blur(6px);
  -webkit-backdrop-filter: blur(6px);
@@ -189,8 +189,7 @@ section {
 }
 
 .hero-section > div img {
- width: 80%;
-  /* animation: float 1.5s linear infinite; */
+ width: 75%;
 }
 
 .hero-section  h1 {
@@ -315,7 +314,7 @@ section {
   width: 100%;
   position: relative;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   gap: 2rem; 
@@ -323,69 +322,45 @@ section {
 }
 
 .project-box {
-  width: 100%;
-  height: 45rem; 
-  position: sticky;
+  width: 17.6rem;
+  min-height: 28rem;
+  max-height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 2rem 0;
+  padding: 1.2rem;
+  gap: 1rem;
   background-color: var(--shade);
-  background-image: var(--shade);
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   border: 0.1rem solid var(--shade);
-  border-top: 0.1rem solid var(--bg-color);
   border-radius: var(--box-radius);
-  z-index: 1;
-  transition: transform 0.3s ease, z-index 0.3s ease;
 }
 
-.project-box:hover {
-  transform: scale(0.95);
-}
-
-.project-header {
-  width: 90%;
-  height: 2rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 1rem; 
-}
-
-.project-details {
+.project-image {
  width: 100%;
- height: 100%;
+ height: 10rem;
  display: flex;
- flex-direction: column;
  align-items: center;
- gap: 1rem;
- margin-top: .4rem;
-}
-
-.project-details .project-image {
- width: 98.5%;
- height: 45%;
- display: flex;
- align-items: flex-end;
  justify-content: center;
  object-fit: cover;
  background-color: var(--bg-color);
+ border-radius: .6rem;
 }
 .project-image > img {
  width: 100%;
- height: 95%;
+ height: 100%;
 }
 
-.project-details .project-info {
- width: 90%;
- height: 55%;
- padding: 0 5%
+
+.project-info {
+ width: 100%;
+ min-height: 12rem;
+ height: auto;
 }
-.project-info > h1 {
+.project-info > h2 {
  font-size: 2rem;
- margin-bottom: 1rem;
+ margin-bottom: .8rem;
 }
 .project-info > p {
  font-size: .95rem;
@@ -398,8 +373,8 @@ section {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
- gap: .6rem;
- margin: 1.5rem 0;
+ gap: .4rem;
+ margin: 1rem 0;
 }
 
 .project-stacks .stack {
@@ -415,23 +390,24 @@ section {
  transform: scale(1.1);
 }
 
-.preview-btn {
- width: fit-content;
- height: 2rem;
+.project-cta {
+ width: 100%;
  display: flex;
  align-items: center;
- color: var(--text-color);
- font-size: .9rem;
- gap: .5rem;
- border-radius: var(--box-radius);
+ justify-content: space-between;
+ list-style: none;
+ margin-top: 1.5rem;
 }
-.preview-btn > span:first-of-type {
-  font-size: 1.2rem;
+.project-cta li:first-of-type a {
+ font-size: 1.2rem;
+ font-weight: 400;
+ color: var(--sclr);
 }
-.preview-btn > span:last-of-type {
-  margin-top: .3rem;
+.project-cta li:first-of-type a svg {
+ margin-bottom: -.3rem;
+ margin-left: .6rem;
+ stroke: var(--sclr);
 }
-
 
 
 .resume-tags {
@@ -560,9 +536,15 @@ footer > div {
   .services-container > div {
    width: 37%;
   }
- 
+  
+  
+  .projects-container {
+   justify-content: space-between;
+   gap: 2.5rem;
+  }
+  
   .project-box {
-   height: 26rem;
+   max-height: 32rem;
    overflow: hidden;
   }
   .project-details {
