--- a/src/App.css
+++ b/src/App.css
@@ -174,6 +174,10 @@ section {
  align-items: center;
  justify-content: center;
  background-color: var(--bg-color);
+ background-image: var(--hero-image);
+ background-position: center;
+ background-size: cover;
+ background-repeat: no-repeat;
  position: relative;
  padding-top: 2rem;
  margin-top: 0;
