--- a/src/index.css
+++ b/src/index.css
@@ -16,15 +16,12 @@
 }
 
 
-@keyframes marquee-animation {
-  0% {
-    transform: translateX(50%);
-  }
-  100% {
-    transform: translateX(-50%);
-  }
-}
 
+@keyframes waving {
+ 50% {
+   transform: rotateX(180deg) rotate(90deg);
+ }
+}
 
 @keyframes dim {
  50% {
@@ -36,11 +33,5 @@
  50% {
   background-color: var(--sclr);
   transform: scale(1.1);
- }
-}
-
-@keyframes float {
- 50% {
-  transform: translateY(-1rem);
  }
 }
