--- a/src/App.css
+++ b/src/App.css
@@ -173,6 +173,8 @@ section {
  align-items: center;
  justify-content: center;
  background-color: var(--bg-color);
+ background-image: linear-gradient(rgba(255, 255, 255, 0.010) .080rem, transparent .080rem), linear-gradient(90deg, rgba(255, 255, 255, 0.010) .080rem, transparent .080rem);
+ background-size: 40px 50px;
  position: relative;
  padding-top: 1.8rem;
  margin-top: 0;
@@ -229,18 +231,18 @@ section {
 
 .about-section-info,
 .about-section-brief {
-  width: 90%;
-  height: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  padding: 1rem 5%;
-  background-color: var(--shade);
-  background-image: var(--shade);
-  border-radius: var(--box-radius);
-  margin-top: 2rem;
+ width: 90%;
+ height: auto;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ justify-content: center;
+ text-align: center;
+ padding: 1rem 5%;
+ background-color: var(--shade);
+ background-image: var(--shade);
+ border-radius: var(--box-radius);
+ margin-top: 2rem;
 }
 
 .about-section-brief {
@@ -337,7 +339,7 @@ section {
 .project-box {
   width: 82%; 
   max-width: 20rem;
-  min-height: 26rem;
+  min-height: 28rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -352,13 +354,14 @@ section {
 
 .project-image {
  width: 100%;
- height: 10rem;
+ height: 12rem;
  display: flex;
  align-items: center;
  justify-content: center;
  object-fit: cover;
  background-color: var(--bg-color);
  border-radius: .6rem;
+ margin-bottom: .8rem;
 }
 .project-image > img {
  width: 100%;
@@ -436,15 +439,15 @@ section {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
- justify-content: space-evenly;
+ justify-content: space-between;
  gap: 2rem;
 }
 
 .tools-container > div div {
- width: 8rem;
- height: 8rem;
+ width: 9rem;
+ height: 4rem;
  display: flex;
- flex-direction: column;
+ flex-direction: row;
  align-items: center;
  justify-content: center;
  gap: 1rem;
@@ -453,13 +456,7 @@ section {
  transition: 200ms;
 }
 
-.tools-container > div div img {
- width: 55%;
- height: 55%;
- border-radius: var(--box-radius);
-}
-.tools-container > div div p {
- font-size: .8rem;
+.tools-container > div div h3 {
  text-align: center;
 }
 
@@ -517,9 +514,9 @@ footer > div {
   
   
   .about-section-brief {
-    height: 24rem;
-    flex-direction: row;
-    padding: 2rem 4%;
+   height: 24rem;
+   flex-direction: row;
+   padding: 2rem 4%;
   }
   .about-section-brief > div {
    height: 100%;
@@ -541,12 +538,10 @@ footer > div {
   .about-section-info > div {
    margin-bottom: 1.5rem;
   }
- 
   
   .services-container > div {
    width: 37%;
   }
-  
   
   .projects-container {
    justify-content: space-evenly;
@@ -562,7 +557,7 @@ footer > div {
   
   .tools-container > div {
    width: 10rem;
-   height: 10rem;
+   height: 4.5rem;
   }
   
   .contacts-container {
