--- a/src/App.css
+++ b/src/App.css
@@ -255,6 +255,7 @@ section {
  width: 100%;
  height: 70%;
  object-fit: cover;
+ background-color: rgba(0, 0, 0, 0.10);
  border-radius: var(--box-radius);
  
  &:hover img {
@@ -267,6 +268,7 @@ section {
  height: 100%;
  object-fit: cover;
  border-radius: var(--box-radius);
+ margin-top: -2rem;
  transition: 400ms;
 }
 
@@ -279,7 +281,7 @@ section {
  align-items: flex-start;
  padding: 1rem 6%;
  gap: .5rem;
- background-color: rgba(255, 255, 255, 0.195);
+ background-color: rgba(0, 0, 0, 0.10);
  border-radius: var(--box-radius);
  list-style: none;
 }
