Make portforlio more minimal

--- a/src/App.css
+++ b/src/App.css
@@ -500,7 +500,7 @@ footer > div {
  justify-content: center;
  gap: .6rem;
  color: var(--text-color);
- margin: 6em 0 1rem 0;
+ margin: 3rem 0 1rem 0;
 }
 
 
