--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 /** importing fonts  **/
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@100;200;300..700&display=swap');
  
  
 * {
@@ -416,19 +416,26 @@ section {
  align-items: center;
  justify-content: space-between;
  list-style: none;
- margin-top: 1.5rem;
+ margin-block: 2.5rem .5rem;
 }
-.project-cta li:first-of-type a {
- font-size: 1.2rem;
- font-weight: 400;
+.project-cta li a {
+ font-weight: 300;
+ padding: .8rem;
  color: var(--sclr);
-}
-.project-cta li:first-of-type a svg {
- margin-bottom: -.3rem;
- margin-left: .6rem;
- stroke: var(--sclr);
+ background-color: rgba(50, 50, 50, .1);
+ border-radius: .8rem;
 }
 
+.view-more-btn {
+ color: var(--sclr);
+ font-size: 1.1rem;
+ font-family: 'Poppins', Sans-Serif;
+ padding: .8rem 1.2rem;
+ background-color: var(--shade);
+ border: none;
+ border-radius: .8rem;
+ margin-block: 2rem;
+}
 
 .resume-tags {
  width: 100%;
